* gadu: fixed possible application hangs, especially when trying to connect on unstable Internet connection (beevvy)
* chat styles: fixed issues with contact activity icon not being displayed in old message styles (beevvy)
* history: #2527 fixed: sort messages in history correctly (ultr)
* sms: fixed gateway code (Vogel)

+++ version 0.11.1
* gui: #2464 fixed: Clear Chat button was not properly activated after reading messages from history (Vogel)
* gui: #2477 fixed: remove expired recent chats at Kadu startup (ultr)
* gui: #2435 & #2437 fixed: View File Transfers action always shows & activates file transfer window (Juzef)
* jabber: #2176 fixed: do not try to fetch personal info when account is disconnected (Juzef)
* chat: fixed a bug in Adium chat styles engine causing messages to be often doubled when opening a chat widget (beevvy)
* history: #2480 probably fixed: crash when loading last day/week/month history into chat widget on 32bit systems (Vogel)
* history: various security improvements pointed by Mateusz Goik from http://www.aliantsoft.pl (Vogel)
* history_migration: #2503 fixed: crashes during history import from Kadu 0.6.5 (Vogel)
* spellchecker: #2319 done: better and smaller aspell Polish dictionary on Windows (beevvy)

﻿+++ version 0.11.0
* gui: #2454 fixed: memory leak in emoticons selector (Juzef)

+++ version 0.11.0-rc3
* gui: #2421 fixed: warning when opening chat conference window (Vogel)
* spellchecker: #2422 fixed: crash in the Highlighter::removeAll() method (beevvy)
* protocol: #2433 fixed: incorrect status behaviour when no passwors is available (Vogel)
* chat-styles: #2438 fixed: crash when window were closed before asynchronous history was loaded (Vogel)
* gui: #2439 fixed: segfault after second opening of configuration window (Vogel)
* gui: #2429 fixed: crash on Ctrl+V in chat window (Vogel)
* gadu: #2423 fixed: do not crash Gadu randomly (Vogel)