@@ -5,6 +5,7 @@
 * chat styles: fixed issues with contact activity icon not being displayed in old message styles (beevvy)
 * history: #2527 fixed: sort messages in history correctly (ultr)
 * sms: fixed gateway code (Vogel)
+* history: #2517 fixed: statuses were always stored as Offline (Vogel)
 
 +++ version 0.11.1
 * gui: #2464 fixed: Clear Chat button was not properly activated after reading messages from history (Vogel)
